Bug 252144 - Bad square mask generation when angle is nonzero.
Summary: Bad square mask generation when angle is nonzero.
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Brush engines (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: LukasT
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-09-23 15:11 UTC by pentalis
Modified: 2010-10-18 14:48 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Square masks at fixed <angle> and growing <fade>. (3.14 KB, image/png)
2010-09-23 15:13 UTC, pentalis
Details

Note You need to log in before you can comment on or make changes to this bug.
Description pentalis 2010-09-23 15:11:54 UTC
Version:           svn trunk (using KDE 4.4.5) 
OS:                Linux

In the autobrush dialogue, when using square masks, and an angle different from zero or 90, 180 or 270, the corners of the mask extend "to infinity" but they are cut without respecting the angle, so the brush dab as a whole never looks tilted as it should.
An image speaks more than a whole wall of text, so I included a self-explaining attachment. (Fade level increases to the right)

Note that I reported this problem before but with a different bug name so this time I tried to make more clear what the problem is.

Reproducible: Didn't try

Steps to Reproduce:
--Open the config popup of the pixel brush paintop.
--Open the autobrush dialogue.
--Select square mask.
--Change the angle.

Actual Results:  
The brush mask is always an untilted square shape instead of a tilted one (aka: rhomboid shape).

Expected Results:  
The brush mask is a tilted square (rhomboid shape).
Comment 1 pentalis 2010-09-23 15:13:54 UTC
Created attachment 51899 [details]
Square masks at fixed <angle> and growing <fade>.
Comment 2 Cyrille Berger 2010-10-13 20:03:19 UTC
SVN commit 1185553 by berger:

Fix: the rectangle brush

BUG: 252144


 M  +21 -8     kis_rect_mask_generator.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1185553
Comment 3 LukasT 2010-10-18 14:48:22 UTC
SVN commit 1187145 by lukast:

Fix the softbrush rect mask too.

CCBUG:252144

 M  +10 -2     kis_curve_rect_mask_generator.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1187145