Fix: the rectangle brush

BUG: 252144

svn path=/trunk/koffice/; revision=1185553